# dockerfiles

./: .dockerignore  .hadolint.yaml  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  publish.yml
cmake/: DockerImage.cmake
images/: CMakeLists.txt
images/base/: CMakeLists.txt  base.dockerfile
images/lazyaix/: CMakeLists.txt  lazyaix.dockerfile
